First section's bg color, nav manu's bg color and Media Query style add

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                         <h1 class="Fifa-title">Fifa Worldcup 2022</h1>
                         <span class="Fifa-info">
                             It is scheduled to take place in Qatar from 21 November to 18 December 2022. This will be the first World Cup ever to be held in the Arab world, and the second World Cup held entirely in Asia after the 2002 tournament in South Korea and Japan.
+                            <br>
+                            <i style="font-size: 8px;color:green;">Kadbedaly</i>
                         </span>
                         <p class="live-show-link">
                             <a href="_taget-blank">Watch Live <span> <i class="fa-solid fa-angle-right"></i></span> </a>
@@ -224,26 +226,28 @@
             <br>
             <hr style="width: 80%; color: rgba(30, 113, 181, 0.497);">
             <br>
-            <a href=""> Contact us</a>
-            <a href=""> Privacy Setting</a>
-            <a href=""> Privacy Policy</a>
-            <a href=""> Terms of Service</a>
-            <a href=""> Goal app</a>            
-            <a href=""> Goal Live</a>  
-            <br>
-            <br>
-            
             <div class="contact">
-                <a href=""><span style="color:red ;">
+                <a href=""> Contact us</a>
+                <a href=""> Privacy Setting</a>
+                <a href=""> Privacy Policy</a>
+                <a href=""> Terms of Service</a>
+                <a href=""> Goal app</a>            
+                <a href=""> Goal Live</a>
+            </div>  
+            <br>
+            <br>
+            <!-- Contac's Icons -->
+            <div class="contact" id="icon">
+                <a href="https://www.youtube.com/"><span style="color:red ;">
                     <i class="fa-brands fa-youtube"></i>
                 </span></a>  
-                <a href=""><span style="color: blue;">
-                    <i class="fa-brands fa-facebook-square"></i>
+                <a href=""><span style="color: rgb(14, 14, 202);">
+                    <i class="fa-brands fa-facebook-messenger"></i>
                 </span> </a>  
                 <a href=""><span style="color: rgba(13, 71, 13, 0.867);">
                     <i class="fa-brands fa-whatsapp"></i>
                 </span> </a>  
-                <a href=""><span style="color:darkblue;">
+                <a href=""><span style="color:rgb(247, 247, 252);">
                     <i class="fa-brands fa-twitter"></i>
                 </span> </a> 
             </div>
