--- a/upcomming-match/upcomming-match.html
+++ b/upcomming-match/upcomming-match.html
@@ -179,17 +179,19 @@
             <hr style="width: 80%; color: rgba(30, 113, 181, 0.497);">
             <br>
             <!-- contact Links -->
-            <a href=""> Contact us</a>
-            <a href=""> Privacy Setting</a>
-            <a href=""> Privacy Policy</a>
-            <a href=""> Terms of Service</a>
-            <a href=""> Goal app</a>            
-            <a href=""> Goal Live</a>  
+            <div class="contact">
+                <a href=""> Contact us</a>
+                <a href=""> Privacy Setting</a>
+                <a href=""> Privacy Policy</a>
+                <a href=""> Terms of Service</a>
+                <a href=""> Goal app</a>            
+                <a href=""> Goal Live</a>
+            </div>  
             <br>
             <br>
             <!-- Contac's Icons -->
-            <div class="contact">
-                <a href=""><span style="color:red ;">
+            <div class="contact" id="icon">
+                <a href="https://www.youtube.com/"><span style="color:red ;">
                     <i class="fa-brands fa-youtube"></i>
                 </span></a>  
                 <a href=""><span style="color: rgb(14, 14, 202);">
