Media Query add for Tablet

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <main>
-        <section>
-        <div  class="first-section">
+        <section class="first-section">
+            <div  >
             <div class="football">
                 <img src="football.png">
             </div>
@@ -38,7 +38,7 @@
                 </div>
             </div>
             
-        </div>
+            </div>
         </section>
         <br>
         <br>
