Bg color,Animation's Media Query style,Upcomming Match's Animation picture change, and also Media query for Mobile-style change

--- a/index.html
+++ b/index.html
@@ -218,6 +218,12 @@
             </div>
         </section>
     </main>
+    <!-- main End -->
+    <!-- Footer Start -->
+    <div class="view">
+        <a href="#">View All</a>
+
+    </div>
     <footer>
         <div class="fotter-section">
             <h1 class="goal">
