Blogs's ancor link none

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="menu">
                 <div class="side-nav">
                         <div class="nav">
-                            <a  href="My-Second-Assignment/index.html" style="background-color:darkcyan;">Blogs</a>
+                            <a  href="#" style="background-color:darkcyan;">Blogs</a>
                             <a  href="upcomming-match/upcomming-match.html">Upcomming Match</a>
                             <a  href="">All Groups</a>  
                         </div>
